Improved documentation to match fontToObserve expectation.  Improved rendering of swaps to be based on swapAnimation array, also using uuidv4 to avoid array index for react keys.  Added no wrap CSS to demo.

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,7 @@ body {
     font-size: 42px;
     font-weight: bold;
 }
+
+.anagram-swap .word {
+    white-space: pre;
+}
